k8s-networking.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: workout-app-ingress
  annotations:
    networking.gke.io/v1beta1.FrontendConfig: https-redirect-config # Name MUST match FrontendConfig above
    kubernetes.io/ingress.global-static-ip-name: workout-app-static-ip
    networking.gke.io/managed-certificates: workout-app-cert
spec:
  rules:
    - host: gainztrackers.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svelte-frontend
                port:
                  number: 80
    - host: www.gainztrackers.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svelte-frontend
                port:
                  number: 80
